--- a/INSTALL
+++ b/INSTALL
@@ -2,10 +2,11 @@ To compile igotu2gpx, you need:
 - qt4
 - boost
 - boost-program-options
+- libusb
 - chrpath (optional, makes it possible to run the program without installation)
 
 On a Ubuntu system, this should get you the dependencies:
-  sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev chrpath
+  sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev libusb-dev chrpath
 
 Afterwards you can compile with:
   qmake
