--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+igotu2gpx (0.2-1) intrepid; urgency=low
+
+  * New upstream release.
+    - complete track point decoding (with --details)
+    - configuration decoding mostly complete
+    - diff mode to analyze configuration changes
+    - reliable Windows serial driver
+
+ -- Michael Hofmann <mh21@piware.de>  Sat, 04 Apr 2009 22:55:08 +0200
+
 igotu2gpx (0.1.1-1) intrepid; urgency=low
 
   * New upstream release. Much improved usb transport.
