--- a/INSTALL
+++ b/INSTALL
@@ -1,20 +1,35 @@
-To compile igotu2gpx on a Linux system, you need:
-- qt4
-- boost
-- boost-program-options
-- libusb
-- chrpath (optional, makes it possible to run the program without installation)
+Dependencies
+------------
+
+To compile igotu2gpx, you need:
+- qt4 (http://www.qtsoftware.com/)
+- boost (http://www.boost.org/)
+- boost-program-options (http://www.boost.org/)
+- libusb 0.1 (on Linux and Mac OS X systems, http://libusb.sourceforge.net/)
+- chrpath (on Linux, optional, makes it possible to run the program without
+  installation)
 
 On a Ubuntu system, this should get you the dependencies:
-  sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev libusb-dev chrpath
+    sudo aptitude install libqt4-dev libboost-dev libboost-program-options-dev \
+        libusb-dev chrpath
 
-Afterwards you can compile with:
-  qmake
-  make
-  sudo make install
+Compiling
+---------
 
+On a Linux system, you can compile with:
+    qmake && make && sudo make install
 If you get error messages about "Unknown test functions" from qmake, try
-qmake-qt4 instead.
+    qmake-qt4 && make && sudo make install
+instead.
+
+On a Mac OS X system, a bit more work is necessary. Copy the file
+localconfig-template.pri to localconfig.pri, uncomment the lines with macx:...
+and adjust the paths so that they match your installation. Afterwards, try:
+    qmake -spec macx-g++ && make
+which should get you part of the way.
+
+Running
+-------
 
 To get started, try:
   man igotu2gpx
