--- a/INSTALL
+++ b/INSTALL
@@ -4,7 +4,7 @@ Dependencies
 To compile igotu2gpx, you need:
 - qt4 (http://www.qtsoftware.com/)
 - boost (http://www.boost.org/)
-- boost-program-options (http://www.boost.org/)
+- boost-program-options (http://www.boost.org/, included with boost)
 - libusb 0.1 (on Linux and Mac OS X systems, http://libusb.sourceforge.net/)
 - chrpath (on Linux, optional, makes it possible to run the program without
   installation)
@@ -25,8 +25,15 @@ instead.
 On a Mac OS X system, a bit more work is necessary. Copy the file
 localconfig-template.pri to localconfig.pri, uncomment the lines with macx:...
 and adjust the paths so that they match your installation. Afterwards, try:
-    qmake -spec macx-g++ && make
-which should get you part of the way.
+    qmake -spec macx-g++ && make && sudo make install
+which should provide you with a working installation in /usr/local.
+
+On Microsoft Windows with MinGW, do something similar. Copy the file
+localconfig-template.pri to localconfig.pri, uncomment the lines with win32:...
+and adjust the paths so that they match your installation. Afterwards, try the
+following from the Qt command line:
+    qmake && make && make install
+which should provide you with a working installation in bin/debug-installed.
 
 Running
 -------
