Refactored command line frontend.

--- a/src/igotu2gpx/igotu2gpx.1
+++ b/src/igotu2gpx/igotu2gpx.1
@@ -86,7 +86,7 @@ to display a detailed listing of all trackpoints:
 Dump the configuration of a GPS tracker to a file, and use it later
 to display the changes made by @trip PC:
 .nf
-    igotu2gpx dump --raw flashimage.raw --count 1
+    igotu2gpx dump --raw flashimage.raw
     # configuration changes in @trip PC ...
     igotu2gpx diff --image flashimage.raw
 .fi
